name:                bytevector
version:             0.1.0.0
synopsis:            Access a ByteString with the Vector interface
description:         Also includes a high-level Vector builder interface for conduit.
homepage:            https://github.com/snoyberg/bytevector
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteVector
                       Data.Conduit.VectorBuilder
  build-depends:       base              >= 4     && < 5
                     , primitive         >= 0.5
                     , bytestring        >= 0.9
                     , vector            >= 0.10
                     , transformers-base >= 0.4
                     , conduit           >= 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark copy-file
    type:           exitcode-stdio-1.0
    hs-source-dirs: bench
    build-depends:  base
                  , criterion
                  , bytevector
                  , mwc-random
                  , temporary
                  , conduit-combinators
                  , exceptions
                  , mono-traversable
                  , ghc-prim
                  , vector
                  , bytestring
    main-is:        Copy.hs
    ghc-options:    -Wall -O2 -with-rtsopts=-s
